--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/user"
+                android:src="@drawable/face2_ic"
                 app:shapeAppearance="@drawable/circle_background" />
 
         </LinearLayout>
