--- a/app/src/main/res/layout/activity_contact_detail.xml
+++ b/app/src/main/res/layout/activity_contact_detail.xml
@@ -39,6 +39,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/next"
             android:layout_width="18dp"
             android:layout_height="17dp"
             android:layout_marginEnd="24dp"
@@ -108,6 +109,7 @@
                 android:layout_width="90dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="8dp"
+                android:layout_gravity="center"
                 android:src="@drawable/demo_action"
                 />
 
